@@ -1,7 +1,7 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.60.28
+Version: 0.99.60.29
 Date: 2025-12-12
 Authors@R: c(
   person(given="Andri", family="Signorell", 
