@@ -51,7 +51,7 @@ export(
 "WrdInsertBookmark","WrdTable","WrdTableHeading","WrdKill","WrdPlot","WrdSaveAs",
 "WrdUpdateBookmark","WrdDeleteBookmark",
 "XLGetRange","XLGetWorkbook","XLKill","XLView","ToXL","Year","YearDay","YearWeek","YearMonth","YearDays","MonthDays","HmsToMinute",
-"YuenTTest","YuleQ","YuleY","ZeroIfNA","NAIfZero","BlankIfNA","NAIfBlank","NAIf","NZ","Zodiac",
+"YuenTTest","YuleQ","YuleY","ZeroIfNA","NAIfZero","NAIfBlank","NAIf","NZ","Zodiac",
 "ZTest",
 "BinTree", "PlotECDF","Abind","TOne","MaxDigits","XLDateToPOSIXct",
 "axTicks.POSIXct", "print.PercTable", "PlotMosaic", "PDFManual", "LongToRgb", "PlotMiss","BreuschGodfreyTest",
