@@ -132,7 +132,6 @@ reference:
 # ~ String Functions -----------------------------------------------------------
   - subtitle: "String Functions"
     contents:
-    - BlankIfNA
     - ColumnWrap
     - FixToTable
     - StrAbbr
