@@ -38,6 +38,8 @@ UPDATED FUNCTIONS:
   * CutGen() has been renamed to Generation().  
   * Recode() gets two new arguments, "keep" to define levels that should
     remain unchanged and "ref" to set the new reference level.
+  * MeanDiffCI() gets the further argument var.equal to complete functionality.  
+  * split.formula() has been given a more versatile logic.
   
 
     
@@ -63,6 +65,7 @@ DEFUNCT:
   * OddsRatio.multinom() has been moved to the package ModTools, where it 
     better fits in.
   * ReadSPSS() has been replaced by ToBaseR(), which is more general.  
+  * BlankIfNA() has been renamed to the more intuitive name NAVal().
     
     
 
